--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ bundle_android2021*.manifest
 
 # Other files
 you.zip
-ExpertPlusStandard.dat
+HardStandard.dat
 assetinfo.json
 RM_Cache.json
 /autosaves
