--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ bundle_android2021*.manifest
 # Other files
 you.zip
 HardStandard.dat
-assetinfo.json
+bundleinfo.json
 RM_Cache.json
 /autosaves
 you.code-workspace
